--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                         <a href="#contact" class="btn secondary-btn" data-scroll>Contact Me</a>
                     </div>
                     <div class="hero-social">
-                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+                        <a href="https://github.com/Jeanre-debug?tab=repositories" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/jeanre-otto-870002334/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="mailto:jeanreotto12@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -141,7 +140,7 @@
                         </div>
                     </div>
                     <div class="about-btns">
-                        <a href="#" class="btn primary-btn">Download CV <i class="fas fa-download"></i></a>
+                        <a href="/Jeanre_CV.pdf"Download class="btn primary-btn">Download CV <i class="fas fa-download"></i></a>
                         <a href="#contact" class="btn outline-btn" data-scroll>Let's Talk</a>
                     </div>
                 </div>
@@ -291,19 +290,19 @@
             <div class="projects-grid">
                 <div class="project-card" data-category="web">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="E-commerce Website">
+                        <img src="/Screenshot 2025-04-14 at 15.20.20.png" alt="E-commerce Website">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://jo-essentials.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/e-commerce-store" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="project-info">
                         <div class="project-tags">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Firebase</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
                         </div>
                         <h3 class="project-title">E-commerce Platform</h3>
                         <p class="project-desc">A fully responsive e-commerce platform with user authentication, product filtering, and payment integration.</p>
@@ -311,31 +310,31 @@
                 </div>
                 <div class="project-card" data-category="app">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="Task Management App">
+                        <img src="/Screenshot 2025-04-14 at 15.26.49.png" alt="Finance Management App">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://jo-personal-finance.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/personal-finance" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="project-info">
                         <div class="project-tags">
-                            <span>React</span>
-                            <span>Firebase</span>
+                            <span>JavaScript</span>
+                            <span>HTML</span>
                             <span>CSS3</span>
                         </div>
-                        <h3 class="project-title">Task Management App</h3>
-                        <p class="project-desc">A comprehensive task management application with real-time updates, user collaboration, and progress tracking.</p>
+                        <h3 class="project-title">Personal financer</h3>
+                        <p class="project-desc">A comprehensive finance management application with real-time updates, user collaboration, and progress tracking.</p>
                     </div>
                 </div>
                 <div class="project-card" data-category="ui">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="Portfolio Redesign">
+                        <img src="/Screenshot 2025-04-14 at 15.29.16.png" alt="Data viz">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://data-vizz.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/data-viz" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -345,17 +344,17 @@
                             <span>CSS3</span>
                             <span>JavaScript</span>
                         </div>
-                        <h3 class="project-title">Portfolio Redesign</h3>
-                        <p class="project-desc">A modern portfolio website with smooth animations, responsive design, and interactive elements.</p>
+                        <h3 class="project-title">Data viz</h3>
+                        <p class="project-desc">A modern data displaying website with smooth animations, responsive design, and interactive elements.</p>
                     </div>
                 </div>
                 <div class="project-card" data-category="web">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="Real Estate Website">
+                        <img src="Screenshot 2025-04-14 at 15.41.01.png" alt="Cosmic Journeys">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://jo-space-invaders.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/space-invaders" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -371,11 +370,11 @@
                 </div>
                 <div class="project-card" data-category="app">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="Fitness Tracking App">
+                        <img src="/Screenshot 2025-04-14 at 15.48.35.png" alt="Fitness Tracking App">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://flow-taskss.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/flow-tasks" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -385,17 +384,17 @@
                             <span>CSS3</span>
                             <span>Firebase</span>
                         </div>
-                        <h3 class="project-title">Fitness Tracking App</h3>
-                        <p class="project-desc">A comprehensive fitness tracking application with workout logging, progress visualization, and goal setting.</p>
+                        <h3 class="project-title">Flow Tasks</h3>
+                        <p class="project-desc">FlowTasks is a sleek, modern task management application designed for visual appeal and productivity. This lightweight web app helps you organize tasks with customizable groups, beautiful animations, and an intuitive user interface.</p>
                     </div>
                 </div>
                 <div class="project-card" data-category="ui">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/600x400" alt="Dashboard UI">
+                        <img src="/Screenshot 2025-04-14 at 15.28.42.png" alt="Dashboard UI">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-link"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="jo-cosmic-journeys.netlify.app" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/Jeanre-debug/cosmic-journeys" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -405,8 +404,8 @@
                             <span>CSS3</span>
                             <span>JavaScript</span>
                         </div>
-                        <h3 class="project-title">Admin Dashboard UI</h3>
-                        <p class="project-desc">A clean and intuitive admin dashboard with data visualization, user management, and customizable widgets.</p>
+                        <h3 class="project-title">Cosmic Journeys</h3>
+                        <p class="project-desc">A comprehensive website with a taste of what I could do</p>
                     </div>
                 </div>
             </div>
@@ -534,10 +533,9 @@
                     <div class="contact-social">
                         <h3>Find me on</h3>
                         <div class="social-links">
-                            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                            <a href="https://github.com/Jeanre-debug?tab=repositories" class="social-link"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/jeanre-otto-870002334/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+
                         </div>
                     </div>
                 </div>
@@ -597,10 +595,9 @@
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Jeanre-debug?tab=repositories" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/jeanre-otto-870002334/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+
                 </div>
             </div>
             <div class="footer-bottom">
