updated cosmic journeys link

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         <img src="/Screenshot 2025-04-14 at 15.28.42.png" alt="Dashboard UI">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="jo-cosmic-journeys.netlify.app" class="project-link"><i class="fas fa-link"></i></a>
+                                <a href="https://jo-cosmic-journeys.netlify.app/" class="project-link"><i class="fas fa-link"></i></a>
                                 <a href="https://github.com/Jeanre-debug/cosmic-journeys" class="project-link"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
