--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
                 <div class="theme-toggle">
                     <i class="fas fa-moon"></i>
                 </div>
+                <div class="theme-switcher" aria-label="Color Theme Switcher">
+                    <span class="visually-hidden">Switch color theme</span>
+                    <button class="theme-dot" data-theme="blue" style="background:#4361ee" aria-label="Blue theme"></button>
+                    <button class="theme-dot" data-theme="green" style="background:#43ee7b" aria-label="Green theme"></button>
+                    <button class="theme-dot" data-theme="pink" style="background:#ee43b0" aria-label="Pink theme"></button>
+                    <button class="theme-dot" data-theme="orange" style="background:#eea843" aria-label="Orange theme"></button>
+                </div>
             </nav>
         </div>
     </header>
@@ -327,152 +334,7 @@
                 <button class="filter-btn" data-filter="mobile">Mobile</button>
                 <button class="filter-btn" data-filter="design">Design</button>
             </div>
-            <div class="projects-grid">
-                <div class="project-card" data-category="web" data-aos="fade-up" data-aos-delay="100">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-04-14 at 15.20.20.png" alt="Project 1">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
-                        </div>
-                        <h3 class="project-title">E-Commerce Platform</h3>
-                        <p class="project-desc">A full-stack e-commerce solution with user authentication, payment integration, and admin dashboard.</p>
-                    </div>
-                </div>
-                <div class="project-card" data-category="mobile" data-aos="fade-up" data-aos-delay="200">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-07-08 at 20.00.04.png" alt="Project 2">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="http://jobudget.co.za" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>React Native</span>
-                            <span>Firebase</span>
-                            <span>Redux</span>
-                        </div>
-                        <h3 class="project-title">Finance Management App</h3>
-                        <p class="project-desc">A cross-platform mobile app for Finance management with real-time synchronization and offline support.</p>
-                    </div>
-                </div>
-                <div class="project-card" data-category="design" data-aos="fade-up" data-aos-delay="300">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-04-14 at 15.28.42.png" alt="Project 3">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>Figma</span>
-                            <span>HTML/CSS</span>
-                            <span>JavaScript</span>
-                        </div>
-                        <h3 class="project-title">Portfolio Website</h3>
-                        <p class="project-desc">A modern, responsive portfolio website with smooth animations and interactive elements.</p>
-                    </div>
-                </div>
-                <div class="project-card" data-category="web" data-aos="fade-up" data-aos-delay="400">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-07-08 at 20.08.50.png" alt="Project 4">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="https://joasteroids.netlify.app/" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>Vue.js</span>
-                            <span>Express.js</span>
-                            <span>PostgreSQL</span>
-                        </div>
-                        <h3 class="project-title">Asteroids</h3>
-                        <p class="project-desc">The classic Asteroids game</p>
-                    </div>
-                </div>
-                <div class="project-card" data-category="mobile" data-aos="fade-up" data-aos-delay="500">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-07-08 at 20.17.02.png" alt="Project 5">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="https://vital-safetysolutions.netlify.app/" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>Flutter</span>
-                            <span>Dart</span>
-                            <span>Firebase</span>
-                        </div>
-                        <h3 class="project-title">Professional Website</h3>
-                        <p class="project-desc">A modern Food Safety Website for my Business</p>
-                    </div>
-                </div>
-                <div class="project-card" data-category="design" data-aos="fade-up" data-aos-delay="600">
-                    <div class="project-img">
-                        <img src="/Screenshot 2025-07-08 at 20.19.38.png" alt="Project 6">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="https://joflowtasks.netlify.app/" class="project-link" title="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" title="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <div class="project-tags">
-                            <span>UI/UX</span>
-                            <span>Prototyping</span>
-                            <span>User Research</span>
-                        </div>
-                        <h3 class="project-title">Task Managing App</h3>
-                        <p class="project-desc">Complete UI/UX design for a modern Task Managing App and user experience with drag and drop functionality.</p>
-                    </div>
-                </div>
-            </div>
+            <div class="projects-grid" id="projects-grid"></div>
         </div>
     </section>
 
@@ -621,5 +483,32 @@
         })();
     </script>
     <script src="script.js"></script>
+
+    <!-- Project Modal -->
+    <div id="project-modal" class="project-modal" style="display:none;">
+        <div class="modal-overlay"></div>
+        <div class="modal-content">
+            <button class="modal-close" aria-label="Close project details">&times;</button>
+            <div class="modal-body">
+                <!-- Content will be injected by JS -->
+            </div>
+        </div>
+    </div>
+    <!-- Spotify Floating Widget Modal -->
+    <div id="spotify-modal" class="spotify-modal" style="display:none;">
+        <div class="spotify-modal-header" id="spotify-modal-header">
+            <span>Now Playing on Spotify</span>
+            <button class="spotify-modal-minimize" aria-label="Minimize Spotify">_</button>
+            <button class="spotify-modal-close" aria-label="Close Spotify">&times;</button>
+        </div>
+        <div class="spotify-modal-body">
+            <!-- Spotify embed will go here -->
+            <iframe id="spotify-embed" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M?utm_source=generator" width="100%" height="80" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
+        </div>
+    </div>
+    <!-- Spotify Open Button -->
+    <button id="spotify-open-btn" class="spotify-open-btn" style="display:none;" aria-label="Open Spotify">
+        <i class="fab fa-spotify"></i>
+    </button>
 </body>
 </html>
