--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="about-btns">
-                        <a href="/Jeanre_CV.pdf" class="btn primary-btn" download>
+                        <a href="/Jeanre-Otto.pdf" class="btn primary-btn" download>
                             <span>Download CV</span>
                             <i class="fas fa-download"></i>
                         </a>
